syntax = "proto3";
package http;
option go_package = "..";

message Agent {
    string AgentId = 1 [json_name="instance_id"];
	string Ip = 2 [json_name="ip"];
	string State = 3 [json_name="state"];
	string Region = 4 [json_name="region"];
	int64 StartUpAt = 5 [json_name="startup_at"];
	string Env = 6 [json_name="env"];  
	string Version = 7 [json_name="version"];
	string ConnectState = 8 [json_name="connect_state"];
	string Heartbeat = 9 [json_name="heartbeat"];
	map<string, string> Tag = 10 [json_name="tags"];
	map<string, string> Status = 11 [json_name="status"];
	map<string, string> Progress = 12 [json_name="progress"];
}

message AgentAlarm {
	string AlarmKey = 1 [json_name="alarm_key"];
	string AlarmTime = 2 [json_name="alarm_time"];
	string AlarmType = 3 [json_name="alarm_type"];
	string AlarmMessage = 4 [json_name="alarm_message"];
}

message AgentStatus {
	string AgentId = 1 [json_name="instance_id"];
	map<string, string> Status = 2 [json_name="status"];
	map<string, string> Progress = 3 [json_name="progress"];
}

message AgentGroup {
	string Name = 1 [json_name="name"];
	string Description = 2 [json_name="description"];
	string Tag = 3 [json_name="tag"];
	map<string, int64> AppliedConfigs = 4 [json_name="applied_configs"];
	int32 Version = 5 [json_name="version"];
}

message Config {
	string Name = 1 [json_name="name"];
	string Content = 2 [json_name="content"];
	int32 Version = 3 [json_name="version"];
	string Description = 4 [json_name="description"];
	bool DelTag = 5 [json_name="delete_tag"];
}

message CheckResult {
	string ConfigName = 1 [json_name="config_name"];
	string Msg = 2 [json_name="message"];
	Config Data = 3 [json_name="detail"];
}